--- a/index.html
+++ b/index.html
@@ -3,15 +3,14 @@
 <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <meta charset="UTF-8">
-    <title>Timestamp Microservice</title>
+    <title>Timestamp API</title>
 </head>
 <body>
 <div class="container">
-    <h1 class="header">API Basejump: Timestamp Microservice</h1>
+    <h1 class="header">API: Timestamp Microservice</h1>
     <blockquote>User Stories:
         <ol>
-            <li>I can pass a string as a parameter, and it will check to see whether that string contains either a unix timestamp or a natural language date (example: January 1, 2016)
-            </li>
+            <li>I can pass a string as a parameter, and it will check to see whether that string contains either a unix timestamp or a natural language date (example: January 1, 2016)</li>
             <li>If it does, it returns both the Unix timestamp and the natural language form of that date.</li>
             <li>If it does not contain a date or Unix timestamp, it returns null for those properties.</li>
         </ol>
